src/components/form.module.css
.contact-form {
  background-color: #ccc;
  padding: 1rem;
  border-radius: 15px;
  flex: 1;
  display: flex;
  flex-direction: column;
}

.form-input {
  margin: 0.6rem 0;
  padding: 0.5rem;
  font-size: 18px;
  font-weight: bold;
  font-family: Arial, Helvetica, sans-serif;
  border-radius: 7px;
  border: none;
}

.submitBtn {
  width: 100%;
  background: dodgerblue;
  color: #fff;
  border: none;
  border-radius: 7px;
  font-weight: bold;
  font-size: 18px;
  padding: 0.5rem;
  margin: 0.33rem 0;
}

.submitBtn:hover {
  background: deepskyblue;
}

@media (max-width: 768px) {
  .contact-form {
    padding: 0.75rem;
  }
}

